--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,4 @@ torchvision == 0.18.0
 youtube-transcript-api == 0.6.2
 chromadb == 0.3.29
 opencv-python-headless == 4.9.0.80
-
+google-auth == 2.29.0
