--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,4 @@ youtube-transcript-api == 0.6.2
 chromadb == 0.3.29
 opencv-python-headless == 4.9.0.80
 streamlit-google-auth == 1.1.8
+streamlit-oauth == 0.1.8
